--- a/css avançado/flex/animations/index.css
+++ b/css avançado/flex/animations/index.css
@@ -13,6 +13,7 @@ body{
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
 }
 .pulse{
     width: 100px;
@@ -50,4 +51,42 @@ body{
         color: green;
     }
 
+}
+
+.cube{
+    width: 100px;
+    height: 100px;
+    background-color: #2ed573;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: rotate 4s linear infinite;
+}
+
+@keyframes rotate{
+    0%{transform: rotate(0deg);}
+    100%{transform: rotate(360deg);}
+}
+
+.inner-cube{
+    width: 50px;
+    height: 50%;
+    background-color: aqua;
+    animation: rotate-inverse 1s linear infinite;
+}
+
+@keyframes rotate-inverse{
+    0%{transform: rotate(360deg);}
+    100%{transform: rotate(90deg);}
+}
+
+.hover-card{
+    width: 200px;
+    height: 200px;
+    background-color: #1e90ff;
+    transition: all 0.3s ease;
+}
+.hover-card:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
